# hse-caos-solutions

./: .asm-lsp.toml  .clang-format  .gitignore  .gitlab-ci.yaml  .manytask.yaml  .private-ci.yaml  CMakeLists.txt  Dockerfile  README.md
common/caos_nostd/: CMakeLists.txt
common/caos_nostd/include/: algorithms.hpp  io.hpp  strings.hpp
common/caos_nostd/src/: entry.cpp  io.cpp  strings.cpp
common/caos_nostd/src/aarch64/: entry.S
common/caos_nostd/src/x86_64/: entry.S
common/catch/: CMakeLists.txt
common/catch/utils/: CMakeLists.txt
common/catch/utils/include/: backoff.hpp  (+6 more)
common/glitch/: CMakeLists.txt  emit-glitch-syms.cpp.in
common/glitch/include/: glitch-calls.inc  glitch.hpp
common/glitch/src/: glitch.cpp
common/nostd/: CMakeLists.txt
common/nostd/include/: assert.hpp
common/syscalls/: CMakeLists.txt
common/syscalls/include/: syscalls.hpp
common/syscalls/src/: syscall_impl.hpp  syscalls.cpp
tasks/: CMakeLists.txt
tasks/01-basic-io/a-plus-b/: a-plus-b.cpp
tasks/01-basic-io/char-sum/: CMakeLists.txt  README.md  solution.cpp
tasks/01-basic-io/fib-root/: README.md  solution.cpp
tasks/01-basic-io/list/: README.md  list.hpp  testing.yaml
tasks/01-basic-io/reverse-list/: README.md  reverse-list.cpp  test.cpp
tasks/02-files/binary-tree/: CMakeLists.txt  README.md  solution.cpp  wrappers.cpp
tasks/02-files/broken-symlinks/: solution.cpp
tasks/02-files/buf-writer/: CMakeLists.txt  README.md  test.cpp  testing.yaml  wrappers.cpp  wrappers.hpp  writer.hpp
tasks/02-files/capture-output/: CMakeLists.txt  README.md  capture.hpp  test.cpp  testing.yaml
tasks/02-files/simple-traverse/: CMakeLists.txt  README.md  create_dir.py  solution.cpp  static.txt  testing.yaml
tasks/03-mmap/c-strings/: alloc.cpp  c-strings.hpp  test-nostd.cpp  test.cpp
tasks/03-mmap/simple-allocator/: CMakeLists.txt  test.cpp
tasks/03-mmap/spiral/: CMakeLists.txt  README.md  wrappers.cpp
tasks/04-mmap/simple-allocator/: simple-allocator.cpp
tasks/04-procs-1/allocator/: CMakeLists.txt  README.md  allocator.cpp  allocator.hpp  test.cpp  testing.yaml  vector.hpp
tasks/04-procs-1/magic-ring-buffer/: CMakeLists.txt  README.md  buffer.hpp  test.cpp  testing.yaml
tasks/04-procs-1/proc-reduce/: CMakeLists.txt  README.md  reduce.hpp  test.cpp  testing.yaml
tasks/04-procs-1/redirect-io/: CMakeLists.txt  README.md  checker.c  solution.cpp  testing.yaml
tasks/04-procs-1/simple-pipeline/: CMakeLists.txt  README.md  testing.yaml
tasks/05-misc/execvpe/: README.md  testing.yaml
tasks/05-misc/fork-timeout/: CMakeLists.txt  testing.yaml  wrappers.cpp
tasks/05-misc/goto/: README.md  test.cpp
tasks/06-asm-1/: README.md
tasks/06-asm-1/arg-sum-1/: CMakeLists.txt  README.md  arg-sum-1.S  arg-sum-1.hpp  test.cpp  testing.yaml
tasks/06-asm-1/arg-sum-2/: CMakeLists.txt  README.md  arg-sum-2.S  arg-sum-2.hpp  test.cpp  testing.yaml
tasks/06-asm-1/deref/: CMakeLists.txt  README.md  deref.S  deref.hpp  test.cpp  testing.yaml
tasks/06-asm-1/persistent-stack/: CMakeLists.txt  README.md  stack.S  stack.hpp  test.cpp  testing.yaml
tasks/06-asm-1/tree-sum/: CMakeLists.txt  README.md  test.cpp  testing.yaml  tree-sum.S  tree-sum.hpp
tasks/07-asm-2/args-fwd/: CMakeLists.txt  README.md  args-fwd.S  call.S  call.hpp  test.cpp  testing.yaml
tasks/07-asm-2/backtrace/: CMakeLists.txt  README.md  main.cpp  solution.S  testing.yaml
tasks/07-asm-2/pivot/: CMakeLists.txt  README.md  call.S  solution.S  test.cpp  testing.yaml
tasks/07-asm-2/wrong-function-1/: CMakeLists.txt  README.md  main.cpp  solution.S  solution.hpp  testing.yaml  wrong_function.S
tasks/07-asm-2/wrong-function-2/: CMakeLists.txt  README.md  solution.hpp  test.cpp  testing.yaml  wrong_function_1.S  wrong_function_2.S
tasks/08-asm-3/dynlib/: CMakeLists.txt  README.md  solution.cpp  testing.yaml
tasks/08-asm-3/indirect-call/: CMakeLists.txt  README.md  solution.S  test.cpp  testing.yaml  wrappers.S
tasks/08-asm-3/polish-compiler/: CMakeLists.txt  README.md  testing.yaml
tasks/08-asm-3/print-args/: CMakeLists.txt  README.md  testing.yaml
tasks/08-asm-3/syscalls/: CMakeLists.txt  README.md  syscalls.cpp  syscalls.hpp  test-nostd.cpp  test.cpp  testing.yaml
tasks/09-fp-thr/atomic/: CMakeLists.txt  README.md  atomic.S  atomic.hpp  test.cpp  testing.yaml
tasks/09-fp-thr/contract/: CMakeLists.txt  README.md  contract.hpp  test.cpp  testing.yaml
tasks/09-fp-thr/mul8/: CMakeLists.txt  README.md  main.cpp  mul8.cpp  mul8.hpp  testing.yaml
tasks/09-fp-thr/philosophers/: CMakeLists.txt  README.md  table.cpp  table.hpp  test.cpp  testing.yaml
tasks/09-fp-thr/queue/: CMakeLists.txt  README.md  queue.hpp  test.cpp  testing.yaml
tasks/10-thr/computation/: CMakeLists.txt  README.md  counter.cpp  gen.py  solution.cpp  testing.yaml
tasks/10-thr/implication/: CMakeLists.txt  README.md  implication.cpp  implication.hpp  test.cpp  testing.yaml
tasks/10-thr/limbo/: CMakeLists.txt  README.md  limbo.hpp  test.cpp  testing.yaml
tasks/10-thr/rw-lock/: CMakeLists.txt  README.md  rw-lock.hpp  testing.yaml
tasks/10-thr/thread-local-alloc/: CMakeLists.txt  README.md  storage.cpp  storage.hpp  test.cpp  testing.yaml
tasks/11-net-sig/addrinfo/: CMakeLists.txt  README.md  checker.py  solution.cpp  testing.yaml
tasks/11-net-sig/chat/: CMakeLists.txt  README.md  solution.cpp  testing.yaml
tasks/11-net-sig/files/: CMakeLists.txt  README.md  testing.yaml
tasks/11-net-sig/ignore/: CMakeLists.txt  README.md  testing.yaml
tasks/11-net-sig/logger/: CMakeLists.txt  README.md  interactor.py  testing.yaml
tasks/bonus/backtrace-2/: CMakeLists.txt  README.md  harness.cpp  testing.yaml
tasks/bonus/coro/: CMakeLists.txt  README.md  testing.yaml  tests.cpp
tasks/bonus/interval/: CMakeLists.txt  README.md  interval.hpp  test.cpp  testing.yaml
tasks/bonus/long-jump/: CMakeLists.txt  README.md  test-nostd.cpp  test.cpp  testing.yaml
xtask/: Cargo.toml
xtask/src/: command.rs  compose.rs  dispatch.rs  lib.rs  main.rs  move.rs  play.rs  task.rs  test.rs  util.rs
xtask/src/util/: clang-fmt.rs  ext.rs
(+205 files in other folders)
